Fix issues on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -119,3 +119,12 @@ body.dark-mode .portfolio-button-custom:hover {
   background-color: #6c757d;
   border-color: #6c757d;
 }
+
+.custom-lightbox {
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100vw !important;
+  height: 100vh !important;
+  overflow: auto !important;
+}
